<resources>
    <string name="app_name">NOMO</string>
    <string name="no_net">当前网络不可用，请稍后再试</string>
    <string name="error_login">登录失效，请重新登录</string>
    <string name="error_str1">系统错误</string>
    <string name="error_str2">网络连接失败，请重试</string>
    <string name="error_str3">服务器连接失败</string>
    <string name="error_str4">网络连接超时</string>
    <string name="error_str5">验证码错误</string>
    <string name="error_str6">服务器出错了</string>
    <string name="error_str7">服务器正在升级，请稍后...</string>
    <string name="error_str8">请求超时,请重试</string>
    <string name="error_str9">您还没有交押金</string>
    <string name="member_empty">暂无交易记录</string>
    <string name="empty_str">暂无记录</string>
    <string name="member_list_title">明细</string>
    <string name="member_vip_buy">购买会员卡</string>
    <string name="ride_over_wx">微信支付</string>
    <string name="ride_over_zfb">支付宝支付</string>
    <string name="ride_over_pay">支付</string>
    <string name="member_vip_go">去支付</string>
    <string name="member_vip_title">会员卡</string>
    <string name="member_vip_free">您可以免费使用</string>
    <string name="member_title">我的VIP</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failed">支付失败</string>
    <string name="no_wechat">没有检查到微信</string>
    <string name="vip_date">会员有效期</string>
    <string name="exit_main">再按一次退出</string>
    <string name="member_text1">续费</string>
    <string name="member_text2">会员卡剩余</string>
    <string name="member_text3">前可使用</string>
    <string name="member_text4">开通会员</string>
    <string name="member_text5">未开通</string>
    <string name="member_text6">请选择套餐</string>
    <string name="news_empty">还没有任何消息</string>
    <string name="news_title">消息中心</string>
    <string name="news_detail">消息详情</string>
    <string name="set_about_us">关于我们</string>
    <string name="set_about_clear">清空缓存</string>
    <string name="set_change_lau">修改语言</string>
    <string name="set_logout">退出登录</string>
    <string name="set_title">设置</string>
    <string name="user_exist">用户信息已存在，正在跳转登录操作......</string>
    <string name="wechat_login">使用微信帐号登录中...</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_success">授权成功，正在跳转登录操作…</string>
    <string name="cancel_success">取消授权成功!</string>
    <string name="login_phone">手机号</string>
    <string name="forget_paw">忘记密码?</string>
    <string name="login_paw">密码</string>
    <string name="login_paw_desc">请输入密码</string>
    <string name="login_account">登录</string>
    <string name="login_regist">注册</string>
    <string name="thethirdlogin">第三方登录</string>
    <string name="login_wechat">微信</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_chopse_code">选择国家/地区</string>
    <string name="phone_tips">请输入正确的手机号码</string>
    <string name="regist_title">注册</string>
    <string name="regist_auth">验证码</string>
    <string name="login_regist_desc">请输入验证码</string>
    <string name="get_auth">获取验证码</string>
    <string name="regist_desc">注册账号表示您同意</string>
    <string name="regist_desc_red">"&lt;"NOMO注册协议"&gt;"</string>
    <string name="regist_reget">)重新获取</string>
    <string name="forgot_title">忘记密码</string>
    <string name="bind_title">绑定手机</string>
    <string name="new_paw">新密码</string>
    <string name="complete">完成</string>
    <string name="bind_complete">绑定</string>
    <string name="getauthsuccess">获取成功</string>
    <string name="registsuccess">注册成功</string>
    <string name="modifysuccess">修改成功</string>
    <string name="pawisempty">请输入手机号码</string>
    <string name="authisempty">请输入正确的验证码</string>
    <string name="paw_tips">长度不小于6位、必须以字母开头、必须包含特殊字符、必须包含数字</string>
    <string name="paw_tips_my">长度不小于6位</string>
    <string name="start_compney">Copyright © SUPERBIG PTE LTD All Rights Reserves</string>
    <string name="regist_bindcode">绑定充电柜编号</string>
    <string name="regist_offercode">优惠码</string>
    <string name="regist_inputcode">请输入7位充电柜编号</string>
    <string name="regist_inputoffercode">请输入优惠码（非必填）</string>
    <string name="modify_paw">修改密码</string>
    <string name="person_vip">加入会员</string>
    <string name="person_basic_vip">激活会员</string>
    <string name="menu_ll1">订单</string>
    <string name="menu_ll2">钱包</string>
    <string name="menu_ll3">会员</string>
    <string name="menu_ll3_desc">(不可用)</string>
    <string name="menu_ll4">优惠</string>
    <string name="menu_ll5">兑换</string>
    <string name="menu_ll6">客服</string>
    <string name="menu_ll7">设置</string>
    <string name="menu_ll8">帮助</string>
    <string name="menu_ll9">商城</string>
    <string name="menu_ll10">幸运轮盘</string>
    <string name="menu_ll11">优惠码</string>
    <string name="bind_un">解绑成功</string>
    <string name="person_title">个人信息</string>
    <string name="person_avatar">头像</string>
    <string name="person_username">昵称</string>
    <string name="person_phone">手机号</string>
    <string name="person_modify_paw">修改密码</string>
    <string name="person_bank_card">银行卡管理</string>
    <string name="person_acount">账号绑定</string>
    <string name="person_modify_success">修改成功</string>
    <string name="person_modify_failed">修改失败</string>
    <string name="fix_username">修改昵称</string>
    <string name="fix_username_hint">请输入您的昵称</string>
    <string name="fix_save">保存</string>
    <string name="fix_sure">确认</string>
    <string name="nickname_is_empty">昵称不能为空</string>
    <string name="acount_bind">账号绑定</string>
    <string name="acount_wx">微信</string>
    <string name="acount_facebook">Facebook</string>
    <string name="bind">绑定</string>
    <string name="unbind">解绑</string>
    <string name="person_bindcode">优惠码</string>
    <string name="person_bindcode_unbind">未绑定</string>
    <string name="person_bindcode_nowinput">现在输入</string>
    <string name="person_bindcode_bind">已绑定</string>
    <string name="person_modify_code">优惠码</string>
    <string name="person_modify_code_hint">请输入7位充电柜编号</string>
    <string name="person_modify_offercode_hint">请输入优惠码</string>
    <string name="syscode_is_empty">编号不能为空</string>
    <string name="my_offer_title">我的优惠</string>
    <string name="my_offer_effictor">适用于全国，不限使用时段</string>
    <string name="my_offer_date">有效期至</string>
    <string name="my_offer_money">代金券</string>
    <string name="empty_offer">没有可用优惠</string>
    <string name="wallet_detail">明细</string>
    <string name="wallet_title">钱包</string>
    <string name="wallet_total_balance">总余额</string>
    <string name="wallet_recharg">充值</string>
    <string name="wallet_scare">积分</string>
    <string name="wallet_reward">奖励金</string>
    <string name="wallet_deposit">押金</string>
    <string name="wallet_card">银行卡</string>
    <string name="wallet_have_deposit">已交押金</string>
    <string name="wallet_no_deposit">未交押金</string>
    <string name="to_rechart_money">充值金额</string>
    <string name="charge_wx">微信支付</string>
    <string name="charge_zfb">支付宝支付</string>
    <string name="charge_stripe">Stripe</string>
    <string name="to_rechart_tips">点击去充值，即表示已阅读同意</string>
    <string name="to_rechart_rules">充值协议</string>
    <string name="to_rechart">去充值</string>
    <string name="to_rechart_title">充值</string>
    <string name="choose_pay_type">请选择支付方式</string>
    <string name="deposit_detail">明细</string>
    <string name="empty_string">暂无数据</string>
    <string name="return_deposit_success">退押金成功</string>
    <string name="wallet_list_recharge">付款成功</string>
    <string name="wallet_list_refound">退款成功</string>
    <string name="wallet_list_buy">购买抵扣</string>
    <string name="wallet_list_purchase_success">购买成功</string>
    <string name="wallet_charge">押金</string>
    <string name="wallet_charge_unit">元</string>
    <string name="wallet_rechrge">充押金</string>
    <string name="wallet_stype">类型(时间)</string>
    <string name="wallet_money">金额</string>
    <string name="wallet_dialog_btn">押金退款</string>
    <string name="wallet_dialog_text">押金退还时间为2-7个工作日，在此期间您的账户将无法使用。是否仍然退押金？</string>
    <string name="pay_deposit">支付押金</string>
    <string name="pay_deposit_d">元</string>
    <string name="wallet_dialog_recharge_text5">微信支付</string>
    <string name="wallet_dialog_recharge_text6">支付宝支付</string>
    <string name="wallet_dialog_recharge_text1">请选择支付方式</string>
    <string name="wallet_dialog_recharge_text7">去支付</string>
    <string name="score_unit">分</string>
    <string name="score_title">积分</string>
    <string name="score_now">当前积分</string>
    <string name="score_rules">积分规则</string>
    <string name="score_zoo">积分明细</string>
    <string name="wallet_tips">提示</string>
    <string name="wallet_tips_desc">操作步骤如下：</string>
    <string name="wallet_tips_desc1">1、添加信用卡/借记卡。</string>
    <string name="wallet_tips_desc2">2、支付押金。</string>
    <string name="wallet_tips_desc3">3、进行充值或购买VIP会员卡。</string>
    <string name="wallet_tips_desc4">4、返回首页，点击【扫码】按钮！</string>
    <string name="wallet_tips_desc5">5、瞄准设备上的二维码，选择充电宝类型。</string>
    <string name="wallet_tips_desc6">6、提示用户需要自己退回押金。</string>
    <string name="error_dialog_ok">好的</string>
    <string name="validationErrors">提醒</string>
    <string name="invalid">卡号错误，请检查后重试！</string>
    <string name="auth_failed">验证错误，请核对后再试！</string>
    <string name="title_activity_maps">Map</string>
    <string name="index_scan_text">扫码充电</string>
    <string name="dialog_general_member_pay">立即支付:</string>
    <string name="dialog_general_member_title">缴纳基础会员费</string>
    <string name="dialog_general_member_context1">激活会员功能</string>
    <string name="dialog_general_member_context2">您需要缴纳基础会员费</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="map_info_text1">步行</string>
    <string name="map_info_time">小时</string>
    <string name="map_info_text2">分钟</string>
    <string name="map_info_text3">距离</string>
    <string name="map_info_text4">米</string>
    <string name="seller_msg_borrow">可借</string>
    <string name="seller_msg_type1">iOS/Android</string>
    <string name="seller_msg_type2">Typc-C</string>
    <string name="seller_msg_type3">iOS/Android/Typc-C</string>
    <string name="seller_msg_navigation">导航</string>
    <string name="seller_msg_return">可还</string>
    <string name="seller_msg_unit">台</string>
    <string name="scan_title">扫码充电</string>
    <string name="scan_tip">扫描二维码</string>
    <string name="scan_open_flash">打开手电筒</string>
    <string name="scan_close_flash">关闭手电筒</string>
    <string name="scan_failed">读取二维码失败</string>
    <string name="loading">等待中</string>
    <string name="load_title">借出失败</string>
    <string name="load_success">借出成功</string>
    <string name="load_desc">是否重试？</string>
    <string name="load_sure">确定</string>
    <string name="load_cancel">取消</string>
    <string name="selecttype_title">选择类型</string>
    <string name="selecttype_rules">租借费率：</string>
    <string name="selecttype_phone">联系电话：</string>
    <string name="selecttype_type">选择充电宝类型</string>
    <string name="select_borrow">借出</string>
    <string name="select_tips">请选择类型</string>
    <string name="update_title">更新</string>
    <string name="update_desc">请及时更新，以免对您的使用造成影响！</string>
    <string name="update_sure">确定</string>
    <string name="using_question">归还后未结束?</string>
    <string name="using_min">使用时长(min)</string>
    <string name="using_price">预计费用</string>
    <string name="buy_box">您可选择购买充电宝</string>
    <string name="buy_box_btn">立即购买</string>
    <string name="order_item">(已购买充电宝)</string>
    <string name="ride_over_title">归还成功</string>
    <string name="ride_over_tital_price">订单总费用</string>
    <string name="ride_over_use_time">使用时长：</string>
    <string name="ride_over_offer">我的优惠</string>
    <string name="buy_box_title">购买充电宝</string>
    <string name="buy_box_desc">若您无法正常归还充电宝，您可选择购买充电宝</string>
    <string name="buy_box_txt1">1、您享有当前押金抵扣购买充电宝；</string>
    <string name="buy_box_txt2">2、押金抵扣购买充电宝成功后，押金值清零；</string>
    <string name="buy_box_txt3">3、本次订单费用直接抵扣为免费订单；</string>
    <string name="buy_box_txt4">4、您再次充押金后可继续借用其他充电宝；</string>
</resources>