<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/login_title_bg">

        <ImageView
            android:id="@+id/head_left"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="center"
            android:src="@drawable/back_white_bg" />

        <TextView
            android:id="@+id/head_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wallet_title"
            android:textColor="@color/color_white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detail"
            style="@style/white_15_w_w"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/wallet_detail" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@drawable/login_title_bg">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <TextView
                style="@style/white_17_w_w"
                android:text="@string/wallet_total_balance" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/myBalance"
                    style="@style/white_35_w_w"
                    android:text="0" />

                <TextView
                    android:id="@+id/money_unit"
                    style="@style/white_14_w_w"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/wallet_shading">

            <Button
                android:id="@+id/Btnrechart"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/recharg_bg"
                android:text="@string/wallet_recharg"
                android:textAllCaps="false"
                android:textColor="@drawable/general_text_selector"
                android:textSize="16sp" />
        </RelativeLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/translate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/score_ll"
                android:layout_width="match_parent"
                android:layout_height="43dp">

                <TextView
                    style="@style/black_17_w_w"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/wallet_scare" />

                <ImageView
                    android:id="@+id/scar_img_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:scaleType="center"
                    android:src="@drawable/right_arrow" />

                <TextView
                    android:id="@+id/myScore"
                    style="@style/deep_gray_17_w_w"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:layout_toLeftOf="@+id/scar_img_right" />
            </RelativeLayout>

            <View
                style="@style/line"
                android:layout_marginLeft="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@color/color_white">

                <TextView
                    style="@style/black_17_w_w"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/wallet_reward" />

                <TextView
                    android:id="@+id/reward_coms"
                    style="@style/deep_gray_17_w_w"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp" />
            </RelativeLayout>

            <View
                style="@style/line"
                android:layout_marginLeft="15dp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/deposit"
            android:layout_width="match_parent"
            android:layout_height="43dp">

            <TextView
                style="@style/black_17_w_w"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/wallet_deposit" />

            <ImageView
                android:id="@+id/deposit_img_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:scaleType="center"
                android:src="@drawable/right_arrow" />

            <TextView
                android:id="@+id/statusDeposit"
                style="@style/deep_gray_17_w_w"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/deposit_img_right" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/translate" />

    <RelativeLayout
        android:id="@+id/bankCard"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/color_white">

        <TextView
            style="@style/black_17_w_w"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/wallet_card" />

        <ImageView
            android:id="@+id/card_img_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:scaleType="center"
            android:src="@drawable/right_arrow" />

        <TextView
            style="@style/deep_gray_17_w_w"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/card_img_right" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/deep_gray_14_w_w"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/wallet_tips" />

        <TextView
            style="@style/deep_gray_14_w_w"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/wallet_tips_desc" />

        <TextView
            style="@style/deep_gray_14_w_w"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/wallet_tips_desc1" />

        <TextView
            style="@style/deep_gray_14_w_w"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/wallet_tips_desc2" />

        <TextView
            style="@style/deep_gray_14_w_w"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/wallet_tips_desc3" />

        <TextView
            style="@style/deep_gray_14_w_w"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/wallet_tips_desc4" />

        <TextView
            style="@style/deep_gray_14_w_w"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/wallet_tips_desc5" />

        <TextView
            style="@style/deep_gray_14_w_w"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/wallet_tips_desc6" />
    </LinearLayout>
</LinearLayout>