<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/white_coners_bg"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cancel"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="15dp"
                    android:src="@drawable/shut_down_icon"
                    android:scaleType="center"/>
                <LinearLayout
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cancel"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">
                    <TextView
                        style="@style/black_15_w_w"
                        android:text="@string/buy_box_title"
                        />
                    <View android:layout_width="92dp"
                        android:layout_height="3dp"
                        android:background="@color/color_theme"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp"
                        android:orientation="vertical">
                        <TextView
                            style="@style/tip_red_14_w_w"
                            android:text="@string/buy_box_desc"
                            />
                        <TextView
                            style="@style/black_14_w_w"
                            android:text="@string/buy_box_txt1"
                            />
                        <TextView
                            style="@style/black_14_w_w"
                            android:text="@string/buy_box_txt2"
                            />
                        <TextView
                            style="@style/black_14_w_w"
                            android:text="@string/buy_box_txt3"
                            />
                        <TextView
                            style="@style/black_14_w_w"
                            android:text="@string/buy_box_txt4"
                            />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>


            <Button
                android:id="@+id/buy_box_btn"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/genaral_btn_click_bg_with_gradient"
                android:text="@string/buy_box_btn"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scaleType="center"
            android:src="@drawable/instructions_icon" />
    </RelativeLayout>
</LinearLayout>