<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/head_layout" />

    <TextView
        style="@style/black_14_w_w"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/login_phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/areaCode"
            style="@style/theme_16_w_w"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="+65" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color_line" />

        <EditText
            android:id="@+id/phoneNum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/login_phone"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_aux_gray"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        style="@style/line"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="4dp" />

    <TextView
        style="@style/black_14_w_w"
        android:layout_height="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/regist_auth" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="11dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/login_auth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/login_regist_desc"
            android:singleLine="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/getAuthBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/get_auth"
            android:textColor="@color/color_tip_red"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        style="@style/line"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/new_paw"
        style="@style/black_14_w_w"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_paw" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="11dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/regist_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:hint="@string/login_paw_desc"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/pawShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/password_show_bg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bind_syscode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">


        <View
            style="@style/line"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp" />

        <TextView
            style="@style/black_14_w_w"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/regist_offercode" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="11dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_medCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/regist_inputoffercode"
                android:singleLine="true"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <View
        style="@style/line"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="4dp" />

    <LinearLayout
        android:id="@+id/ll_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            style="@style/deep_gray_12_w_w"
            android:text="@string/regist_desc" />

        <TextView
            android:id="@+id/registRules"
            style="@style/tip_red_12_w_w"
            android:text="@string/regist_desc_red" />
    </LinearLayout>

    <Button
        android:id="@+id/regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/genaral_btn_click_bg_with_gradient"
        android:text="@string/regist_title"
        android:textAllCaps="false"
        android:textColor="@drawable/general_text_selector"
        android:textSize="15sp" />
</LinearLayout>